--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   get_storage: ^2.1.1
   cached_network_image: ^3.4.1
   intl: ^0.20.2
+  flutter_screenutil: ^5.9.3
+  device_preview: ^1.3.1
 
 dev_dependencies:
   flutter_test:
