--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   intl: ^0.20.2
   flutter_screenutil: ^5.9.3
   device_preview: ^1.3.1
+  fl_chart: ^1.1.1
 
 dev_dependencies:
   flutter_test:
